--- a/createStart.html
+++ b/createStart.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
-    <title>ProductList</title>
+    
+    <title>CreateSoap</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -30,7 +31,9 @@
     </header>
     <main>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
     <script src="general.js"></script>
   </body>
+
 </html>
