vars and landing page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/vna8uxu.css" />
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main class="homePage">
+      <img src="images/filler-mages.jpg" class="heroImage" alt="soaps" />
+      <div class="heroText">
+        <h1>Hero Image</h1>
+        <a href="#">Call to action</a>
+      </div>
+      <div class="howWorks">
+        <h2>How it works</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nemo
+          culpa nihil aut. Amet porro soluta voluptatibus enim sequi cumque
+          culpa distinctio doloribus pariatur. Corporis eos soluta maiores unde
+          tempore. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Eligendi possimus minima molestiae nostrum corrupti ad, error quo iste
+          veniam eius alias similique ratione laborum beatae optio cumque magni
+          est veritatis?
+        </p>
+      </div>
+      <section class="threeLinks">
+        <a href="#" class="bigImg"
+          ><img
+            src="images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg"
+            alt="soap">
+            <div class="smallImgs">
+          <a href="#"
+            ><img
+              src="images/sincerely-media-g99XPhFqgu4-unsplash.jpg"
+              class="imgLeft"
+              alt="soap"
+          /></a>
+          <a href="#"
+            ><img
+              src="images/sincerely-media-g99XPhFqgu4-unsplash.jpg"
+              class="imgRight"
+              alt="soap again"
+          /></a>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
