--- a/productList.html
+++ b/productList.html
@@ -29,7 +29,15 @@
        </ul>
      </nav>
     </header>
-    <main>
+    <main id="mainProductL">
+      <h2 class="shopPL">Shop our products</h2>
+       <article class="productList">
+          <img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg">
+             <div id="infoPL">
+               <h2 class="nameProductL">name</h2>
+               <h2 class="priceProductL">DKK</h2>
+             </div>
+       </article>
     </main>
     <footer></footer>
     <script src="general.js"></script>
