--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
      <div class="headerFlex">
        <div id="menu">Menu</div>
       
-      <a href="index.html"><div class="logo">LOGO</div></a>
-      <div>
+      <a href="index.html"><div class="logo"></div></a>
+      <div class="AccontCart">
         <a class="AccountDesktop" href="#">Account</a></li>
         <a href="#">Cart</a>
       </div>
@@ -26,6 +26,7 @@
         <li><a href="createStart.html">Create Soap</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Workshops</a></li>
+        <li id="accountRemove"><a href="#">Account</a></li>
       </ul>
     </nav>
     </header>
