--- a/productList.html
+++ b/productList.html
@@ -34,8 +34,8 @@
        <article class="productList">
           <img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg">
              <div id="infoPL">
-               <h2 class="nameProductL">name</h2>
-               <h2 class="priceProductL">DKK</h2>
+               <h3 class="nameProductL">name</h3>
+               <p class="priceProductL">DKK</p>
              </div>
        </article>
     </main>
