--- a/productPage.html
+++ b/productPage.html
@@ -29,7 +29,24 @@
        </ul>
      </nav>
     </header>
-    <main></main>
+    <main id="mainPP">
+      <div id="infoPP">
+         <h3 class="nameProductL">name</h3>
+         <h3 class="priceProductL">DKK</h3>
+       </div>
+       <article class="productPage">
+         <h3>Colour</h3>
+         <p>purple blue green yellow</p>
+         <h3>Essential oils</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quia, commodi a nostrum consequatur accusantium quae excepturi maxime sit eaque esse error eius consectetur atque ratione deleniti dolores inventore deserunt!</p>
+         <h3>Ingredients</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, nobis! Nisi, corrupti, est expedita cumque deserunt debitis possimus deleniti quae reprehenderit cupiditate fugiat iusto similique consectetur. Ad expedita autem architecto?</p>
+         <a href="#" class="addtoCart">Add to cart</a>
+        </article>
+       <article class="productPageimg">
+         <img src="../../images/filler-mages.jpg" alt="soapbar" class="soapBarimg">
+       </article>
+    </main>
     <footer></footer>
     <script src="general.js"></script>
   </body>
