--- a/createStart.html
+++ b/createStart.html
@@ -31,7 +31,41 @@
     </header>
     <main>
     </main>
-    <footer>
+    <footer class="footer">
+      <div class="footer_container">
+          <div class="footer_column one">
+            <ul>
+               <li><img src="logo.svg" alt="CustomiseMe_logo" class="footer_logo"></li>
+            </ul>
+            <ul>  
+               <li>Co-creating with your requests,<br>
+                   needs and wishes in mind</li>
+               <li>© CUSTOMISE ME 2022</li>
+            </ul>
+          </div>
+          <div class="footer_column two">
+            <ul>
+               <li><a href="#">Create Your Soap</a></li>
+               <li><a href="#">About Us</a></li>
+               <li><a href="#">Ingredients</a></li>
+            </ul>
+            <ul> 
+               <li><a href="#">Workshop</a></li>
+               <li><a href="#">Contact</a></li>
+               <li><a href="#">Cookies & Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer_column three">
+            <ul>
+               <li><img src="instagram.svg" alt="insta"> <img src="facebook.svg" alt="face" class="facebook"></li>
+            </ul>
+            <ul> 
+               <li>CustomiseMe ApS</li>
+               <li>Falen 21D, 2TV 5000 Odense C</li>
+               <li>info@customiseme.dk</li>
+            </ul>
+          </div>
+      </div>
     </footer>
     <script src="general.js"></script>
   </body>
