--- a/createStart.html
+++ b/createStart.html
@@ -35,7 +35,7 @@
       <div class="footer_container">
           <div class="footer_column one">
             <ul>
-               <li><img src="logo.svg" alt="CustomiseMe_logo" class="footer_logo"></li>
+               <li><img src="svgs/logo.svg" alt="CustomiseMe_logo" class="footer_logo"></li>
             </ul>
             <ul>  
                <li>Co-creating with your requests,<br>
