--- a/productPage.html
+++ b/productPage.html
@@ -51,7 +51,7 @@
       <div class="footer_container">
           <div class="footer_column one">
             <ul>
-               <li><img src="logo.svg" alt="CustomiseMe_logo" class="footer_logo"></li>
+               <li><img src="svgs/logo.svg" alt="CustomiseMe_logo" class="footer_logo"></li>
             </ul>
             <ul>  
                <li>Co-creating with your requests,<br>
@@ -73,7 +73,7 @@
           </div>
           <div class="footer_column three">
             <ul>
-               <li><img src="instagram.svg" alt="insta"> <img src="facebook.svg" alt="face" class="facebook"></li>
+               <li><img src="svgs/instagram.svg" alt="insta"> <img src="svgs/facebook.svg" alt="face" class="facebook"></li>
             </ul>
             <ul> 
                <li>CustomiseMe ApS</li>
