--- a/productPage.html
+++ b/productPage.html
@@ -33,7 +33,10 @@
       <div id="infoPP">
          <h3 class="nameProductL">name</h3>
          <h3 class="priceProductL">DKK</h3>
-       </div>
+       </div> 
+       <article class="productPageimg">
+         <img src="../../images/filler-mages.jpg" alt="soapbar" class="soapBarimg">
+       </article>
        <article class="productPage">
          <h3>Colour</h3>
          <p>purple blue green yellow</p>
@@ -41,11 +44,14 @@
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quia, commodi a nostrum consequatur accusantium quae excepturi maxime sit eaque esse error eius consectetur atque ratione deleniti dolores inventore deserunt!</p>
          <h3>Ingredients</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, nobis! Nisi, corrupti, est expedita cumque deserunt debitis possimus deleniti quae reprehenderit cupiditate fugiat iusto similique consectetur. Ad expedita autem architecto?</p>
-         <a href="#" class="addtoCart">Add to cart</a>
+         <div class="unitPP">
+           <a href="#" class="addtoCart">  - <span>0</span>  +  </a>
+         </div>
+         <div class="cartPP">
+           <a href="#" class="addtoCart">Add to cart</a>
+         </div>
         </article>
-       <article class="productPageimg">
-         <img src="../../images/filler-mages.jpg" alt="soapbar" class="soapBarimg">
-       </article>
+
     </main>
     <footer class="footer">
       <div class="footer_container">
