--- a/productList.html
+++ b/productList.html
@@ -32,7 +32,7 @@
     <main id="mainProductL">
       <h2 class="shopPL">Shop our products</h2>
        <article class="productList">
-          <img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg">
+          <a href="productPage.html"><img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg"></a>
              <div id="infoPL">
                <h3 class="nameProductL">name</h3>
                <p class="priceProductL">DKK</p>
