--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
   </head>
   <body>
     <header>
-     <div class="headerFlex">
-       <div id="menu">Menu</div>
-      
-      <a href="index.html"><div class="logo"></div></a>
-      <div class="AccontCart">
-        <a class="AccountDesktop" href="#">Account</a></li>
-        <a href="#">Cart</a>
+      <div class="headerFlex">
+        <div id="menu">Menu</div>
+
+        <a href="index.html"><div class="logo"></div></a>
+        <div class="AccontCart">
+          <!--<a class="AccountDesktop" href="#">Account</a></li>-->
+          <a href="#">Cart</a>
+        </div>
       </div>
-    </div>
-    <nav class="topnav">
-      <ul class="menuContent">
-        <li><a href="productList.html">Shop</a></li>
-        <li><a href="createStart.html">Create Soap</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Workshops</a></li>
-        <li id="accountRemove"><a href="#">Account</a></li>
-      </ul>
-    </nav>
+      <nav class="topnav">
+        <ul class="menuContent">
+          <li><a href="productList.html">Shop</a></li>
+          <li><a href="createStart.html">Create Soap</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Workshops</a></li>
+          <li id="accountRemove"><a href="#">Account</a></li>
+        </ul>
+      </nav>
     </header>
     <main class="homePage">
       <img src="images/filler-mages.jpg" class="heroImage" alt="soaps" />
@@ -36,36 +36,37 @@
         <h1>Hero Image</h1>
         <a href="#">Call to action</a>
       </div>
-        <section class="howWorks">
-          <h2>How it works</h2>
-          <div class="stepOne">
-            <h4>1</h4>
-            <p>Start by creating an account</p>
-            <a href="#">Create account</a>
-          </div>
-          <div class="arrow"></div>
-          <div class="stepTwo">
-            <h4>2</h4>
-            <p>Create your unique bar soap</p>
-            <a href="#">Create soap</a>
-          </div>
-          <div class="arrow"></div>
-          <div class="stepThree">
-            <h4>3</h4>
-            <p>Place your order when you're finished</p>
-          </div>
-          <div class="arrow"></div>
-          <div class="stepFour">
-            <h4>4</h4>
-            <p>Time to relax while we do our magic</p>
-          </div>
-        </section>
+      <section class="howWorks">
+        <h2>How it works</h2>
+        <div class="stepOne">
+          <h4>1</h4>
+          <p>Start by creating an account</p>
+          <a href="#">Create account</a>
+        </div>
+        <div class="arrow"></div>
+        <div class="stepTwo">
+          <h4>2</h4>
+          <p>Create your unique bar soap</p>
+          <a href="#">Create soap</a>
+        </div>
+        <div class="arrow"></div>
+        <div class="stepThree">
+          <h4>3</h4>
+          <p>Place your order when you're finished</p>
+        </div>
+        <div class="arrow"></div>
+        <div class="stepFour">
+          <h4>4</h4>
+          <p>Time to relax while we do our magic</p>
+        </div>
+      </section>
       <section class="threeLinks">
         <a href="#" class="bigImg"
           ><img
             src="images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg"
-            alt="soap"></a>
-            <div class="smallImgs">
+            alt="soap"
+        /></a>
+        <div class="smallImgs">
           <a href="#" class="imgLeft"
             ><img
               src="images/sincerely-media-g99XPhFqgu4-unsplash.jpg"
@@ -81,38 +82,49 @@
     </main>
     <footer class="footer">
       <div class="footer_container">
-          <div class="footer_column one">
-            <ul>
-               <li><img src="svgs/logo.svg" alt="CustomiseMe_logo" class="footer_logo"></li>
-            </ul>
-            <ul>  
-               <li>Co-creating with your requests,<br>
-                   needs and wishes in mind</li>
-               <li>© CUSTOMISE ME 2022</li>
-            </ul>
-          </div>
-          <div class="footer_column two">
-            <ul>
-               <li><a href="#">Create Your Soap</a></li>
-               <li><a href="#">About Us</a></li>
-               <li><a href="#">Ingredients</a></li>
-            </ul>
-            <ul> 
-               <li><a href="#">Workshop</a></li>
-               <li><a href="#">Contact</a></li>
-               <li><a href="#">Cookies & Privacy Policy</a></li>
-            </ul>
-          </div>
-          <div class="footer_column three">
-            <ul>
-               <li><img src="svgs/instagram.svg" alt="instagram"> <img src="svgs/facebook.svg" alt="facebook" class="facebook"></li>
-            </ul>
-            <ul> 
-               <li>CustomiseMe ApS</li>
-               <li>Falen 21D, 2TV 5000 Odense C</li>
-               <li>info@customiseme.dk</li>
-            </ul>
-          </div>
+        <div class="footer_column one">
+          <ul>
+            <li>
+              <img
+                src="svgs/logo.svg"
+                alt="CustomiseMe_logo"
+                class="footer_logo"
+              />
+            </li>
+          </ul>
+          <ul>
+            <li>
+              Co-creating with your requests,<br />
+              needs and wishes in mind
+            </li>
+            <li>© CUSTOMISE ME 2022</li>
+          </ul>
+        </div>
+        <div class="footer_column two">
+          <ul>
+            <li><a href="#">Create Your Soap</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Ingredients</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Workshop</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Cookies & Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer_column three">
+          <ul>
+            <li>
+              <img src="svgs/instagram.svg" alt="instagram" />
+              <img src="svgs/facebook.svg" alt="facebook" class="facebook" />
+            </li>
+          </ul>
+          <ul>
+            <li>CustomiseMe ApS</li>
+            <li>Falen 21D, 2TV 5000 Odense C</li>
+            <li>info@customiseme.dk</li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="general.js"></script>
