header basicly done

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <header>
       <div class="headerFlex">
         <div id="menu">Menu</div>
+        <nav class="topnav" id="displayNav">
+          <ul class="menuContent">
+            <li><a href="productList.html">Shop</a></li>
+            <li><a href="createStart.html">Create Soap</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Workshops</a></li>
+            <li id="accountRemove"><a href="#">Account</a></li>
+          </ul>
+        </nav>
 
         <a href="index.html"><div class="logo"></div></a>
         <div class="AccontCart">
-          <!--<a class="AccountDesktop" href="#">Account</a></li>-->
+          <a class="AccountDesktop" href="#">Account</a></li>
           <a href="#">Cart</a>
         </div>
       </div>
-      <nav class="topnav">
-        <ul class="menuContent">
-          <li><a href="productList.html">Shop</a></li>
-          <li><a href="createStart.html">Create Soap</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Workshops</a></li>
-          <li id="accountRemove"><a href="#">Account</a></li>
-        </ul>
-      </nav>
     </header>
     <main class="homePage">
       <img src="images/filler-mages.jpg" class="heroImage" alt="soaps" />
