javascript for productlist  - linnea

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </header>
     <main class="homePage">
-      <img src="images/filler-mages.jpg" class="heroImage" alt="soaps" />
+      <img src="images/hero-image-3.png" class="heroImage" alt="Picture of soaps" />
       <div class="heroText">
         <h1>Hero Image</h1>
         <a href="#">Call to action</a>
@@ -76,21 +76,21 @@
       </section>
       <section class="threeLinks">
         <a href="#" class="bigImg"
-          ><img
-            src="images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg"
+          >Shop<!--<img
+            src="images/pink-round.png"
             alt="soap"
-        /></a>
+        />--></a>
         <div class="smallImgs">
           <a href="#" class="imgLeft"
             ><img
-              src="images/sincerely-media-g99XPhFqgu4-unsplash.jpg"
+              src="images/oil-picture.png"
               alt="soap"
           /></a>
           <a href="#" class="imgRight"
             ><img
-              src="images/sincerely-media-g99XPhFqgu4-unsplash.jpg"
-              alt="soap again"
-          /></a>
+              src="images/about.png"
+              alt="soap again"/>
+          </a>
         </div>
       </section>
     </main>
