--- a/productList.html
+++ b/productList.html
@@ -32,6 +32,7 @@
     </header>
     <main id="mainProductL">
       <h3 class="shopPL">Shop our products</h3>
+      <template class="soapListTemplate">
        <article class="productList">
           <a href="productPage.html"><img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg"></a>
              <div id="infoPL">
@@ -39,6 +40,7 @@
                <p class="priceProductL">DKK</p>
              </div>
        </article>
+      </template>
     </main>
     <footer class="footer">
       <div class="footer_container">
@@ -77,5 +79,6 @@
       </div>
     </footer>
     <script src="general.js"></script>
+    <script src="productList.js"></script>
   </body>
 </html>
