--- a/createStart.html
+++ b/createStart.html
@@ -30,7 +30,19 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="createSoap">
+      <section>
+       <div><h3>Create your own soap</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</p></div>
+        <div><h4>Ingredients:</h4>
+        <p>Coconut oil* (Cocos Nucifera oil), Olive oil* (Olea Europaea oil), Shea butter* (Butyrospermum Parkii), Distilled water. Their individual benefits you can review in our ingredients page.</p>
+        </div>
+        <p>We highly suggest a maximum of two essential oils in your creation.</p>
+        <p>Minimum order for a customised bar of soap is 4</p>
+        <p>Starting price is 220 DKK ( 55DKK per bar )</p>
+      </section>
+      <section><img src="images/hero-image-4.png" alt="soaps"></section>
+      
     </main>
     <footer class="footer">
       <div class="footer_container">
