--- a/productPage.html
+++ b/productPage.html
@@ -32,17 +32,14 @@
     </header>
     <main id="mainPP">
       <div id="infoPP">
-         <h3>name</h3>
-         <h3>DKK</h3>
+         <h3 class="soapName">name</h3>
+         <h3 class="soapPrice">DKK 150</h3>
        </div> 
        <article class="productPageimg">
          <img src="../../images/filler-mages.jpg" alt="soapbar" class="soapBarimg">
        </article>
        <section class="productPage">
-         <div class="color">
-          <h3>Colour</h3>
-         <p>purple blue green yellow</p>
-        </div>
+  
          <div class="oils">
            <h3>Essential oils</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quia</p>
@@ -51,13 +48,18 @@
            <h3>Ingredients</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        
+        <div class="color">
+          <h3>Colour</h3>
+         <p>purple</p>
+        </div>
+        <p class="extraPad">*Certified Organic product</p>
+      
 
          <div class="unitPP">
-           <a href="#" class="addtoCart">  - <span>0</span>  +  </a>
+           <a href="#" class="unitButton">  - <span>0</span>  +  </a>
          </div>
          <div class="cartPP">
-           <a href="#" class="addtoCart">Add to cart</a>
+           <a href="#" class="cartButton">Add to cart</a>
          </div>
         </section>
 
