--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <h1>Hero Image</h1>
         <a href="#">Call to action</a>
       </div>
-      <h2>How it works</h2>
       <div id="scrollBanner">
         <div class="scrollText">
           Customise your own soap
@@ -76,20 +75,20 @@
       </section>
       <section class="threeLinks">
         <a href="#" class="bigImg"
-          >Shop<!--<img
+          ><div class="shopBox">Shop</div><!--<img
             src="images/pink-round.png"
             alt="soap"
         />--></a>
         <div class="smallImgs">
           <a href="#" class="imgLeft"
-            ><img
+            >Ingredients<!--<img
               src="images/oil-picture.png"
               alt="soap"
-          /></a>
+          />--></a>
           <a href="#" class="imgRight"
-            ><img
+            >Story<!--<img
               src="images/about.png"
-              alt="soap again"/>
+              alt="soap again"/>-->
           </a>
         </div>
       </section>
