three links and JavaScript

--- a/index.html
+++ b/index.html
@@ -74,11 +74,17 @@
         </div>
       </section>
       <section class="threeLinks">
-        <a href="#" class="bigImg"
+        <div class="leftBigImg">
+          <a href="productList.html">Shop our products</a>
+        </div>
+        <div class="rightLinks">
+        <div class="rightTopImg"><a href="#">Ingredients</a></div>
+        <div class="rightBottomImg"><a href="#">Who we are</a></div></div>
+        <!--<a href="#" class="bigImg"
           >Shop<!--<img
             src="images/pink-round.png"
             alt="soap"
-        />--></a>
+        />--><!--</a>
         <div class="smallImgs">
           <a href="#" class="imgLeft"
             ><img
@@ -90,7 +96,7 @@
               src="images/about.png"
               alt="soap again"/>
           </a>
-        </div>
+        </div>-->
       </section>
     </main>
     <footer class="footer">
