--- a/createStart.html
+++ b/createStart.html
@@ -31,17 +31,20 @@
       </div>
     </header>
     <main class="createSoap">
-      <section>
-       <div><h3>Create your own soap</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</p></div>
-        <div><h4>Ingredients:</h4>
+      <section class="createInfo">
+       <div><h3> Customise your very own soap</h3>
+        <p>You get your own choice of essential oils, color, pattern and shape.</p>
+        <p>Create something personal for yourself or for someone dear.</p></div>
+        <div><h3>Ingredients</h3>
         <p>Coconut oil* (Cocos Nucifera oil), Olive oil* (Olea Europaea oil), Shea butter* (Butyrospermum Parkii), Distilled water. Their individual benefits you can review in our ingredients page.</p>
         </div>
+       <div>
         <p>We highly suggest a maximum of two essential oils in your creation.</p>
         <p>Minimum order for a customised bar of soap is 4</p>
         <p>Starting price is 220 DKK ( 55DKK per bar )</p>
+      </div> 
       </section>
-      <section><img src="images/hero-image-4.png" alt="soaps"></section>
+      <section class="createSoapImg"><img src="images/hero-image-2.png" alt="soaps"></section>
       
     </main>
     <footer class="footer">
