--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               src="images/about.png"
               alt="soap again"/>-->
           </a>
-        </div>-->
+        </div>
       </section>
     </main>
     <footer class="footer">
