homepage and product page

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       </div>
     </header>
     <main class="homePage">
-      <img src="images/hero-image-3.png" class="heroImage" alt="Picture of soaps" />
+      <img src="images/hero-3-2.png" class="heroImage" alt="Picture of soaps" />
       <div class="heroText">
-        <h1>Hero Image</h1>
-        <a href="#">Call to action</a>
+        <h1>CustomiseMe</h1>
+        <p>Plant Based Ingredients. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Easy and Customisable.  &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Upcycled Packaging.</p>
+        <a href="#">Create Soap</a>
       </div>
       <div id="scrollBanner">
         <div class="scrollText">
@@ -80,22 +81,6 @@
         <div class="rightLinks">
         <div class="rightTopImg"><a href="#">Ingredients</a></div>
         <div class="rightBottomImg"><a href="#">Who we are</a></div></div>
-        <!--<a href="#" class="bigImg"
-          >Shop<!--<img
-            src="images/pink-round.png"
-            alt="soap"
-        />--><!--</a>
-        <div class="smallImgs">
-          <a href="#" class="imgLeft"
-            >Ingredients<!--<img
-              src="images/oil-picture.png"
-              alt="soap"
-          />--></a>
-          <a href="#" class="imgRight"
-            >Story<!--<img
-              src="images/about.png"
-              alt="soap again"/>-->
-          </a>
         </div>
       </section>
     </main>
