--- a/productPage.html
+++ b/productPage.html
@@ -78,7 +78,7 @@
           </div>
           <div class="footer_column two">
             <ul>
-               <li><a href="#">Create Your Soap</a></li>
+               <li><a href="#">Create Soap</a></li>
                <li><a href="#">About Us</a></li>
                <li><a href="#">Ingredients</a></li>
             </ul>
