--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <a href="index.html"><div class="logo"></div></a>
         <div class="AccontCart">
-          <a class="AccountDesktop" href="#">Account</a></li>
+          <a class="AccountDesktop" href="#">Account</a>
           <a href="#">Cart</a>
         </div>
       </div>
@@ -34,7 +34,13 @@
       <img src="images/hero-3-2.png" class="heroImage" alt="Picture of soaps" />
       <div class="heroText">
         <h1>CustomiseMe</h1>
-        <p>Plant Based Ingredients. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Easy and Customisable.  &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Upcycled Packaging.</p>
+        <p>
+          Plant Based Ingredients.
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          Easy and Customisable. &nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          Upcycled Packaging.
+        </p>
         <a href="#">Create Soap</a>
       </div>
       <div id="scrollBanner">
@@ -79,8 +85,8 @@
           <a href="productList.html">Shop our products</a>
         </div>
         <div class="rightLinks">
-        <div class="rightTopImg"><a href="#">Ingredients</a></div>
-        <div class="rightBottomImg"><a href="#">Who we are</a></div></div>
+          <div class="rightTopImg"><a href="#">Ingredients</a></div>
+          <div class="rightBottomImg"><a href="#">Who we are</a></div>
         </div>
       </section>
     </main>
