--- a/productList.html
+++ b/productList.html
@@ -25,7 +25,7 @@
 
         <a href="index.html"><div class="logo"></div></a>
         <div class="AccontCart">
-          <a class="AccountDesktop" href="#">Account</a></li>
+          <a class="AccountDesktop" href="#">Account</a>
           <a href="#">Cart</a>
         </div>
       </div>
@@ -33,49 +33,65 @@
     <h3 class="shopPL">Shop our products</h3>
     <main id="mainProductL">
       <template class="soapListTemplate">
-       <article class="productList">
-          <a href="productPage.html?_id:"><img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg"></a>
-             <div id="infoPL">
-               <h3 class="nameProductL">name</h3>
-               <p class="priceProductL">DKK</p>
-             </div>
-       </article>
+        <article class="productList">
+          <a href="productPage.html?_id:"
+            ><img
+              src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg"
+              alt="soap"
+              class="listimg"
+          /></a>
+          <div id="infoPL">
+            <h3 class="nameProductL">name</h3>
+            <p class="priceProductL">DKK</p>
+          </div>
+        </article>
       </template>
     </main>
     <footer class="footer">
       <div class="footer_container">
-          <div class="footer_column one">
-            <ul>
-               <li><img src="svgs/logo.svg" alt="CustomiseMe_logo" class="footer_logo"></li>
-            </ul>
-            <ul>  
-               <li>Co-creating with your requests,<br>
-                   needs and wishes in mind</li>
-               <li>© CUSTOMISE ME 2022</li>
-            </ul>
-          </div>
-          <div class="footer_column two">
-            <ul>
-               <li><a href="#">Create Soap</a></li>
-               <li><a href="#">About Us</a></li>
-               <li><a href="#">Ingredients</a></li>
-            </ul>
-            <ul> 
-               <li><a href="#">Workshop</a></li>
-               <li><a href="#">Contact</a></li>
-               <li><a href="#">Cookies & Privacy Policy</a></li>
-            </ul>
-          </div>
-          <div class="footer_column three">
-            <ul>
-               <li><img src="svgs/instagram.svg" alt="instagram"> <img src="svgs/facebook.svg" alt="facebook" class="facebook"></li>
-            </ul>
-            <ul> 
-               <li>CustomiseMe ApS</li>
-               <li>Falen 21D, 2TV 5000 Odense C</li>
-               <li>info@customiseme.dk</li>
-            </ul>
-          </div>
+        <div class="footer_column one">
+          <ul>
+            <li>
+              <img
+                src="svgs/logo.svg"
+                alt="CustomiseMe_logo"
+                class="footer_logo"
+              />
+            </li>
+          </ul>
+          <ul>
+            <li>
+              Co-creating with your requests,<br />
+              needs and wishes in mind
+            </li>
+            <li>© CUSTOMISE ME 2022</li>
+          </ul>
+        </div>
+        <div class="footer_column two">
+          <ul>
+            <li><a href="#">Create Soap</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Ingredients</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Workshop</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Cookies & Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer_column three">
+          <ul>
+            <li>
+              <img src="svgs/instagram.svg" alt="instagram" />
+              <img src="svgs/facebook.svg" alt="facebook" class="facebook" />
+            </li>
+          </ul>
+          <ul>
+            <li>CustomiseMe ApS</li>
+            <li>Falen 21D, 2TV 5000 Odense C</li>
+            <li>info@customiseme.dk</li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="general.js"></script>
