create soap love

--- a/createStart.html
+++ b/createStart.html
@@ -32,19 +32,21 @@
     </header>
     <main class="createSoap">
       <section class="createInfo">
-       <div><h3> Customise your very own soap</h3>
+       <div><h2> Customise your very own soap</h2>
         <p>You get your own choice of essential oils, color, pattern and shape.</p>
         <p>Create something personal for yourself or for someone dear.</p></div>
-        <div><h3>Ingredients</h3>
+       <div class="createP">
+        <p>We highly suggest a maximum of two essential oils in your creation.</p>
+        <p>If you have any allergies, reach out to us and we will help pick the best product for you.</p>
+        <p>Minimum order for a customised bar of soap is 4.</p>
+        <p>Starting price is 220 DKK (55DKK per bar).</p>
+        </div> 
+      <div class="ing"><h3>Ingredients</h3>
         <p>Coconut oil* (Cocos Nucifera oil), Olive oil* (Olea Europaea oil), Shea butter* (Butyrospermum Parkii), Distilled water. Their individual benefits you can review in our ingredients page.</p>
         </div>
-       <div>
-        <p>We highly suggest a maximum of two essential oils in your creation.</p>
-        <p>Minimum order for a customised bar of soap is 4</p>
-        <p>Starting price is 220 DKK ( 55DKK per bar )</p>
-      </div> 
       </section>
-      <section class="createSoapImg"><img src="images/hero-image-2.png" alt="soaps"></section>
+      <section class="createSoapImg"><a href="#">Create Soap</a>
+      </section>
       
     </main>
     <footer class="footer">
@@ -73,7 +75,7 @@
           </div>
           <div class="footer_column three">
             <ul>
-               <li><img src="instagram.svg" alt="insta"> <img src="facebook.svg" alt="face" class="facebook"></li>
+               <li><img src="/svgs/instagram.svg" alt="insta"> <img src="/svgs/facebook.svg" alt="face" class="facebook"></li>
             </ul>
             <ul> 
                <li>CustomiseMe ApS</li>
