--- a/productList.html
+++ b/productList.html
@@ -34,7 +34,7 @@
       <h3 class="shopPL">Shop our products</h3>
       <template class="soapListTemplate">
        <article class="productList">
-          <a href="productPage.html?_id:"><img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg"></a>
+          <a href="productPage.html?_id="><img src="../../images/cong-phuc-nguyen-fbMBRfysb40-unsplash.jpg" alt="soap" class="listimg"></a>
              <div id="infoPL">
                <h3 class="nameProductL">name</h3>
                <p class="priceProductL">DKK</p>
