--- a/createStart.html
+++ b/createStart.html
@@ -75,7 +75,7 @@
           </div>
           <div class="footer_column three">
             <ul>
-               <li><img src="/svgs/instagram.svg" alt="insta"> <img src="/svgs/facebook.svg" alt="face" class="facebook"></li>
+               <li><img src="svgs/instagram.svg" alt="insta"> <img src="svgs/facebook.svg" alt="face" class="facebook"></li>
             </ul>
             <ul> 
                <li>CustomiseMe ApS</li>
